# remyx_experiments

./: .gitignore  README.md
depthai_cam_blob_classify/: main.py
depthai_cam_blob_classify/model/: metadata.csv
microcontroller/arduino_nano_ble/: README.md
microcontroller/esp32_classifier/: CMakeLists.txt  README.md  sdkconfig
microcontroller/esp32_classifier/main/: CMakeLists.txt  app_camera_esp.h  detection_responder.cc  detection_responder.h  esp32_model_data.cc  esp32_model_data.h  image_provider.h  main_functions.cc  main_functions.h  model_settings.cc  model_settings.h
remyx_agents/: Remyx_AI_Transformers_Agents.ipynb
snapml_multiclass_classify/: multiclass-snapml-remyx-example.lsproj  project.data
snapml_multiclass_classify/Entities/: 1584245789276290_763788.json  1584252598951609_53429.json  1584252598952005_53431.json  1647896340707300_35997271.json  1647896390076485_36023463.json  1647896390086075_36023545.json  1647900537506771_37925228.json  1648167242482338_3434678.json  1648167268041658_3452578.json  1648493903180707_1849091.json  1648497405357385_2961896.json  1648498765972892_3833359.json  1648498765973626_3833361.json  1648498765973988_3833363.json  1648498765998269_3833611.json  1648498766038254_3833968.json  1648499098905758_4150014.json  1648499116752911_4167436.json  1648500049794958_4719471.json  1649718253204181_7644291.json  1649719310168942_8112953.json  1649977481275218_1153395.json  1650400045752779_146640.json  1674260607111221_380299.json  1674260607111222_380300.json  1674260607111222_380301.json  1674260607111222_380302.json  (+214 more)
(+24 files in other folders)
